[package]
name = "current-see"
version = "0.1.0"
authors = ["Homer-Mctavish <49701255+Homer-Mctavish@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }

dioxus = { version = "0.5", features = ["fullstack", "router"] }
rand = "0.8"
rand_distr = "0.5"


# Debug
log = "0.4.19"
dioxus-logger = "0.4.1"
chrono = { version = "0.4.38", features = ["serde"] }
futures = "0.3.30"
reqwest = { version = "0.12.3", features = ["json"] }
serde_json = "1.0.116"
async-recursion = "1.1.0"

[features]
default = []
server = ["dioxus/axum"]
web = ["dioxus/web"]
